# EfficientML

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd.yml
projects/: README.md
projects/experiment-cv-tasks/: README.md
