[project]
name = "EfficientML"
version = "0.1.0"
description = ""
authors = [
    {name = "Namgyu-Youn", email = "yynk2012@gmail.com"}
]
readme = "README.md"
packages = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
torch = {version = "2.6.0+cpu", source = "pytorch"}
ruff = "^0.9.9"
pytest = "^8.3.4"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.ruff]
line-length = 160
target-version = "py310"

lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # Ruff-specific rules
    "I",    # isort
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "S",    # flake8-bandit
]